<resources>
    <string name="app_name" translatable="false">Sensorify</string>
    <string name="app_version" translatable="false">v1.0.0</string>
    <string name="mainDevName" translatable="false">zAlweNy26</string>
    <string name="testInterstitialID" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="mainInterstitialID" translatable="false">ca-app-pub-8581305580729785/5676190289</string>
    <string name="first_open">Thanks for downloading this app! If you don\'t find many sensors, it\'s because you don\'t have them! 😟</string>
    <string name="screenshotDesc">Screenshot</string>
    <string name="aboutDesc">About</string>
    <string name="shareDesc">Share</string>
    <string name="playPauseDesc">Play / Pause</string>
    <string name="expandCollapseDesc">Expand / Collapse</string>
    <string name="downloadFinished">The update has just been downloaded !</string>
    <string name="downloadError">Unable to download the update !</string>
    <string name="restart">INSTALL</string>
    <string name="retry">RETRY</string>
    <string name="home_page">Overview</string>
    <string name="settings_page">Settings</string>
    <string name="credits_page">Credits</string>
    <string name="missing_sensors_page">Missing sensors</string>
    <string name="system_page">System</string>
    <string name="connection_page">Connection</string>
    <string name="battery_page">Battery</string>
    <string name="luminosity_page">Luminosity</string>
    <string name="gyroscope_page">Gyroscope</string>
    <string name="barometer_page">Barometer</string>
    <string name="magnetometer_page">Magnetometer</string>
    <string name="accelerometer_page">Accelerometer</string>
    <string name="linear_acceleration_page">Linear acceleration</string>
    <string name="proximity_page">Proximity</string>
    <string name="orientation_page">Orientation</string>
    <string name="pedometer_page">Pedometer</string>
    <string name="gps_page">GPS location</string>
    <string name="gravity_page">Gravity</string>
    <string name="sound_meter_page">Sound meter</string>
    <string name="rotation_vectors_page">Rotation vectors</string>
    <string name="temperature_page">Temperature</string>
    <string name="humidity_page">Humidity</string>
    <string name="heartbeat_page">Heartbeat</string>
    <string name="system_block">System</string>
    <string name="connection_block">Connection</string>
    <string name="battery_block">Battery</string>
    <string name="luminosity_block">Luminosity</string>
    <string name="gyroscope_block">Gyroscope</string>
    <string name="barometer_block">Pressure</string>
    <string name="magnetometer_block">Magnet</string>
    <string name="accelerometer_block">Accelerometer</string>
    <string name="linear_acceleration_block">Acceleration</string>
    <string name="proximity_block">Proximity</string>
    <string name="orientation_block">Compass</string>
    <string name="pedometer_block">Pedometer</string>
    <string name="gps_block" translatable="false">GPS</string>
    <string name="gravity_block">Gravity</string>
    <string name="sound_meter_block">Sound</string>
    <string name="rotation_vectors_block">Rotation</string>
    <string name="temperature_block">Temperature</string>
    <string name="humidity_block">Humidity</string>
    <string name="heartbeat_block">Pulsation</string>
    <string name="block_info">Informations</string>
    <string name="block_details">Details</string>
    <string name="unknownValue">Unknown</string>
    <string name="state_text">State : %1$s</string>
    <string name="unavailableValue">Unavailable</string>
    <string name="nullValue" translatable="false">0</string>
    <string name="yesValue">Yes</string>
    <string name="noValue">No</string>
    <string name="of">of %1$s</string>
    <string name="share_via">Share via</string>
    <string name="sensorName">Name :</string>
    <string name="sensorVendor">Vendor :</string>
    <string name="sensorVersion">Version :</string>
    <string name="sensorPowerUsage">Power consumption :</string>
    <string name="sensorResolution">Maximum resolution :</string>
    <string name="sensorRange">Maximum range :</string>
    <string name="valueX" translatable="false">X = %1$s</string>
    <string name="valueY" translatable="false">Y = %1$s</string>
    <string name="valueZ" translatable="false">Z = %1$s</string>
    <string name="sensorNote">NOTE :</string>
    <string name="systemInfo">Page dedicated to the informations regarding the software and hardware parts of the device in use.</string>
    <string name="softwareInfo">Software informations</string>
    <string name="hardwareInfo">Hardware informations</string>
    <string name="cameraInfo">Cameras resolutions</string>
    <string name="androidVersion">Android version :</string>
    <string name="sdkVersion">SDK version :</string>
    <string name="secPatch">Security patch :</string>
    <string name="interfaceVersion">Interface :</string>
    <string name="androidID">Android ID :</string>
    <string name="suppABIs">Supported ABIs :</string>
    <string name="brand">Brand :</string>
    <string name="manufacturer">Manufacturer :</string>
    <string name="model">Model :</string>
    <string name="cpu" translatable="false">CPU :</string>
    <string name="cpuFreq">CPU frequency :</string>
    <string name="ram" translatable="false">RAM :</string>
    <string name="storage">Storage :</string>
    <string name="hasBluetooth">Owns Bluetooth :</string>
    <string name="hasNFC">Owns NFC :</string>
    <string name="hasBiometric">Owns biometric sensor :</string>
    <string name="frontResolution">Front picture :</string>
    <string name="backResolution">Back picture :</string>
    <string name="frontVideoResolution">Front video :</string>
    <string name="backVideoResolution">Back video :</string>
    <string name="screenSize">Screen size :</string>
    <string name="screenDensity">Screen density :</string>
    <string name="screenResolution">Screen resolution :</string>
    <string name="ramArc" translatable="false">RAM</string>
    <string name="storageArc">STORAGE</string>
    <string name="connectionInfo">Page dedicated to the informations regarding Wi-Fi and mobile connection of the device in use.</string>
    <string name="connectionType">Type : %1$s</string>
    <string name="connection_type_mobile">Mobile</string>
    <string name="connection_type_wifi" translatable="false">Wi-Fi</string>
    <string name="connection_type_plane">Airplane</string>
    <string name="connection_type_none">None</string>
    <string name="simAbsent">Absent</string>
    <string name="simDisabled">Disabled</string>
    <string name="simBlocked">Blocked</string>
    <string name="simReady">Ready</string>
    <string name="simUnknown">Unknown</string>
    <string name="open_wifi">Open Wi-Fi settings</string>
    <string name="open_mobile">Open mobile data settings</string>
    <string name="wifi_android_perms">From Android 8 (Oreo), the operating system requests location access for connection informations.</string>
    <string name="android_mac_perms">From Android 6 (Marshmallow), the operating system no longer provides the ability to obtain the MAC address of the device. For this reason, the constant 02:00:00:00:00:00 results.</string>
    <string name="wifi_state_value_on">online</string>
    <string name="wifi_state_value_off">offline</string>
    <string name="wifi_ssid">Name (SSID) :</string>
    <string name="wifi_bssid" translatable="false">BSSID :</string>
    <string name="wifi_ip">IP address :</string>
    <string name="wifi_mac">MAC address :</string>
    <string name="wifi_rssi" translatable="false">RSSI :</string>
    <string name="wifi_frequency">Frequency :</string>
    <string name="mobileOperator">Operator :</string>
    <string name="simState">SIM state :</string>
    <string name="connectionSpeed">Speed :</string>
    <string name="gpsInfo">Page dedicated to the informations regarding the coordinates detected by the GPS signal of the device in use.</string>
    <string name="activate_gps">If you want to get the coordinates of your position, please activate the GPS.</string>
    <string name="open_maps">Open in Google Maps</string>
    <string name="gps_enabled">enabled</string>
    <string name="gps_disabled">disabled</string>
    <string name="latitude">Latitude ≃</string>
    <string name="longitude">Longitude ≃</string>
    <string name="altitude">Altitude ≃</string>
    <string name="heartbeatInfo"><font size="22"><b>What is it ?</b></font>\n\n
        A photoplethysmogram (PPG) is an optically obtained plethysmogram that can be used to detect blood volume changes in the microvascular bed of tissue.
        A PPG is often obtained by using a pulse oximeter which illuminates the skin and measures changes in light absorption.
        To measure the heart rate, therefore, we will simulate a PPG using the camera and the flash.\n\n
        Explanation offered by the most famous online encyclopedia, <b>Wikipedia.org</b></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="settings_category_title_theme">Theme</string>
    <string name="settings_category_title_units">Units</string>
    <string name="settings_category_title_generals">Generals</string>
    <string name="settings_theme">Change theme</string>
    <string name="settings_theme_summary_on">Set up the application light theme.</string>
    <string name="settings_theme_summary_off">Set up the application dark theme.</string>
    <string name="settings_battery">Based on battery</string>
    <string name="settings_battery_summary_on">Set up the dark theme when the battery percentage is under 30 %.</string>
    <string name="settings_battery_summary_off">Doesn\'t set the dark theme based on battery percentage.</string>
    <string name="settings_time">Based on time</string>
    <string name="settings_time_summary_on">Set up the dark theme when it\'s later than 20:00 (08:00 pm).</string>
    <string name="settings_time_summary_off">Doesn\'t set the dark theme based on local time.</string>
    <string name="settings_language">Language</string>
    <string name="settings_language_summary">Change the application language.</string>
    <string name="settings_language_dialog_title">Choose a language :</string>
    <string name="settings_language_default" translatable="false">en</string>
    <string name="settings_screen">Screen mode</string>
    <string name="settings_screen_summary_on">Keep the screen always on.</string>
    <string name="settings_screen_summary_off">Doesn\'t keep the screen always on.</string>
    <string name="settings_rotation">Screen rotation</string>
    <string name="settings_rotation_summary_on">Disables the screen rotation.</string>
    <string name="settings_rotation_summary_off">Free screen rotation.</string>
    <string name="settings_unit_dialog_title">Choose a unit :</string>
    <string name="settings_precision">Precision</string>
    <string name="settings_precision_dialog_title">Choose a value :</string>
    <string name="settings_temp">Temperature</string>
    <string name="settings_temp_summary" translatable="false">Celsius</string>
    <string name="settings_temp_default" translatable="false">°C</string>
    <string name="settings_distance">Distance</string>
    <string name="settings_distance_summary">Meter</string>
    <string name="settings_distance_default" translatable="false">m</string>
    <string name="settings_pressure">Pressure</string>
    <string name="settings_pressure_summary">Hectopascals | Millibar</string>
    <string name="settings_pressure_default" translatable="false">hPa</string>
    <string name="settings_angle">Angle</string>
    <string name="settings_angle_summary">Degree</string>
    <string name="settings_angle_default" translatable="false">°</string>
</resources>