<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:background="?attr/backgroundColor"
        android:title="@string/settings_category_title_generals"
        app:iconSpaceReserved="false">

        <ListPreference
            android:defaultValue="@string/settings_language_default"
            android:dialogTitle="@string/settings_language_dialog_title"
            android:entries="@array/settings_language_entries"
            android:entryValues="@array/settings_language_values"
            android:key="pref_language"
            android:summary="@string/settings_language_summary"
            android:title="@string/settings_language"
            app:icon="@drawable/ic_language" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_screen"
            android:summaryOff="@string/settings_screen_summary_off"
            android:summaryOn="@string/settings_screen_summary_on"
            android:title="@string/settings_screen"
            app:icon="@drawable/ic_phone_android" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_rotation"
            android:summaryOff="@string/settings_rotation_summary_off"
            android:summaryOn="@string/settings_rotation_summary_on"
            android:title="@string/settings_rotation"
            app:icon="@drawable/ic_screen_rotation" />

        <!--<Preference
            android:key="delete_screenshots"
            android:summary="@string/settings_delete_screenshots_summary"
            android:title="@string/settings_delete_screenshots"
            app:icon="@drawable/ic_delete" />-->

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_title_theme"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_theme"
            android:summaryOff="@string/settings_theme_summary_off"
            android:summaryOn="@string/settings_theme_summary_on"
            android:title="@string/settings_theme"
            app:icon="@drawable/ic_theme" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_theme_battery"
            android:summaryOff="@string/settings_battery_summary_off"
            android:summaryOn="@string/settings_battery_summary_on"
            android:title="@string/settings_battery"
            app:icon="@drawable/ic_battery" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_theme_time"
            android:summaryOff="@string/settings_time_summary_off"
            android:summaryOn="@string/settings_time_summary_on"
            android:title="@string/settings_time"
            app:icon="@drawable/ic_time" />

    </PreferenceCategory>

    <PreferenceCategory
        android:background="?attr/backgroundColor"
        android:title="@string/settings_category_title_units"
        app:allowDividerAbove="false"
        app:allowDividerBelow="false"
        app:iconSpaceReserved="false">

        <it.alwe.sensorify.NumberPickerPreference
            android:key="pref_precision"
            app:icon="@drawable/ic_decimal"
            app:dialogTitle="@string/settings_precision_dialog_title"
            app:title="@string/settings_precision"/>

        <ListPreference
            android:defaultValue="@string/settings_temp_default"
            android:dialogTitle="@string/settings_unit_dialog_title"
            android:entries="@array/settings_temp_entries"
            android:entryValues="@array/settings_temp_values"
            android:key="pref_temp"
            android:summary="@string/settings_temp_summary"
            android:title="@string/settings_temp"
            app:icon="@drawable/ic_thermometer" />

        <ListPreference
            android:defaultValue="@string/settings_distance_default"
            android:dialogTitle="@string/settings_unit_dialog_title"
            android:entries="@array/settings_distance_entries"
            android:entryValues="@array/settings_distance_values"
            android:key="pref_distance"
            android:summary="@string/settings_distance_summary"
            android:title="@string/settings_distance"
            app:icon="@drawable/ic_distance" />

        <ListPreference
            android:defaultValue="@string/settings_pressure_default"
            android:dialogTitle="@string/settings_unit_dialog_title"
            android:entries="@array/settings_pressure_entries"
            android:entryValues="@array/settings_pressure_values"
            android:key="pref_pressure"
            android:summary="@string/settings_pressure_summary"
            android:title="@string/settings_pressure"
            app:icon="@drawable/ic_gauge" />

        <ListPreference
            android:defaultValue="@string/settings_angle_default"
            android:dialogTitle="@string/settings_unit_dialog_title"
            android:entries="@array/settings_angle_entries"
            android:entryValues="@array/settings_angle_values"
            android:key="pref_angle"
            android:summary="@string/settings_angle_summary"
            android:title="@string/settings_angle"
            app:icon="@drawable/ic_angle" />

    </PreferenceCategory>

</PreferenceScreen>