<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SplashScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/app_name"
        android:textColor="@color/totalBlack"
        android:textSize="50sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="50sp"
        app:autoSizeMinTextSize="25sp"
        app:autoSizeStepGranularity="1px"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/appVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/app_version"
        android:textColor="@color/totalBlack"
        android:textSize="20sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeMinTextSize="15sp"
        app:autoSizeStepGranularity="1px"
        app:autoSizeTextType="uniform" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:padding="50dp"
        app:srcCompat="@drawable/ic_sensorify" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/mainDevName"
        android:textColor="@color/totalBlack"
        android:textSize="30sp"
        android:textStyle="bold"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeMinTextSize="15sp"
        app:autoSizeStepGranularity="1px"
        app:autoSizeTextType="uniform" />
</LinearLayout>