<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/blockLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sensors.HeartbeatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?attr/mainColor"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize">

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/heartbeat_page"
            android:textColor="?attr/toolBarTextColor"
            android:textColorHighlight="?attr/toolBarTextColor"
            android:textColorHint="?attr/toolBarTextColor"
            android:textColorLink="?attr/toolBarTextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="24sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="1px"
            app:autoSizeTextType="uniform" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/blockScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/backgroundColor"
        android:scrollbarThumbHorizontal="@android:color/transparent"
        android:scrollbarThumbVertical="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp"
                android:background="@drawable/container_bg"
                android:orientation="vertical"
                android:padding="15dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageButton
                        android:id="@+id/captureButton"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/screenshotDesc"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/screenshot"
                        app:tint="?attr/iconColor" />

                    <ImageButton
                        android:id="@+id/showInfoButton"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/aboutDesc"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/shareButton"
                        app:layout_constraintStart_toEndOf="@+id/captureButton"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/question_mark"
                        app:tint="?attr/iconColor" />

                    <ImageButton
                        android:id="@+id/shareButton"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/shareDesc"
                        android:scaleType="fitCenter"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/share"
                        app:tint="?attr/iconColor" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/sensorInfoLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    app:el_duration="750"
                    app:el_expanded="false"
                    app:el_parallax="0">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/heartbeatInfo"
                        android:textColor="?attr/textColor"
                        android:textColorHighlight="@color/colorPrimary"
                        android:textColorHint="?attr/textColor"
                        android:textColorLink="?attr/textColor"
                        android:textIsSelectable="true"
                        android:autoLink="web"
                        android:linksClickable="true"
                        android:textSize="16sp"
                        app:autoSizeMaxTextSize="16sp"
                        app:autoSizeMinTextSize="8sp"
                        app:autoSizeStepGranularity="1px"
                        app:autoSizeTextType="uniform" />

                </net.cachapa.expandablelayout.ExpandableLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/containerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                app:cardElevation="0dp"
                app:cardMaxElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.camera.view.PreviewView
                    android:id="@+id/cameraPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:screenOrientation="portrait" />

                <ImageButton
                    android:id="@+id/startMeasuring"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/playPauseDesc"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/play_to_pause"
                    app:tint="@color/colorPrimary" />

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pulseLayout"
                android:layout_width="200dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/ic_heartbeat">

                <TextView
                    android:id="@+id/heartbeatValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="2"
                    android:maxLines="2"
                    android:text="@string/nullValue"
                    android:textColor="?attr/textColor"
                    android:textColorHighlight="@color/colorPrimary"
                    android:textColorHint="?attr/textColor"
                    android:textColorLink="?attr/textColor"
                    android:textIsSelectable="true"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    app:autoSizeMaxTextSize="22sp"
                    app:autoSizeMinTextSize="11sp"
                    app:autoSizeStepGranularity="1px"
                    app:autoSizeTextType="uniform"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>